chevereto/chevereto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: chevereto
  name: chevereto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chevereto
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: chevereto
    spec:
      containers:
      - env:
        - name: CHEVERETO_DB_HOST
          value: db
        - name: CHEVERETO_DB_NAME
          value: chevereto
        - name: CHEVERETO_DB_PASSWORD
          value: chevereto
        - name: CHEVERETO_DB_PREFIX
          value: chv_
        - name: CHEVERETO_DB_USERNAME
          value: chevereto
        image: nmtan/chevereto
        name: chevereto
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /var/www/html/images
          name: chevereto-images
      restartPolicy: Always
      volumes:
      - name: chevereto-images
        persistentVolumeClaim:
          claimName: chevereto-images
status: {}
