chevereto/chevereto-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chevereto
  name: chevereto
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: chevereto
