chevereto/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
